<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_12"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:src="@drawable/logo_icon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/welcome_back"
            android:textColor="#000000"
            android:textSize="@dimen/dp_20"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/sign_in_to_continue"
            android:textColor="#5b5757"
            android:textSize="@dimen/dp_15"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_35"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:maxLines="1"
            android:padding="@dimen/dp_10"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000"/>

        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/passoword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/dp_10"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000"/>

        <TextView
            android:id="@+id/txt_forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/forget_password"
            android:textColor="#807777"
            android:textSize="@dimen/dp_15"
            android:gravity="end"
            android:textStyle="bold"/>

        <Button

            android:id="@+id/btn_loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@color/colorAccent"
            android:padding="@dimen/dp_3"
            android:text="login"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="@dimen/dp_4"
        android:layout_marginBottom="@dimen/dp_3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textColor="#807777"
            android:textSize="@dimen/dp_16"
            android:gravity="end"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txt_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="@dimen/dp_5"
            android:textSize="@dimen/dp_16"
            android:textStyle="bold"/>

    </LinearLayout>
</RelativeLayout>