<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".home.activities.SignUpAcivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:src="@drawable/logo_icon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/welcome_back"
            android:textColor="#000000"
            android:textSize="@dimen/dp_20"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/sign_up_to_continue"
            android:textColor="#5b5757"
            android:textSize="@dimen/dp_15"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_35"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/dp_10"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000"/>
        <EditText
        android:id="@+id/edt_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawablePadding="@dimen/dp_8"
        android:gravity="center_vertical"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLines="1"
        android:padding="@dimen/dp_10"
        android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000"/>
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="@dimen/dp_8"
            android:gravity="center_vertical"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/dp_10"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000"/>

        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="@dimen/dp_8"
            android:gravity="center_vertical"
            android:hint="@string/passoword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/dp_10"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000"/>

        <Button

            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:padding="@dimen/dp_3"
            android:text="@string/register"
            android:background="@color/colorAccent"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold"/>
    </LinearLayout>


</RelativeLayout>

