<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"

    tools:context=".home.activities.FixAppointmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_12"

        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:src="@drawable/logo_icon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/welcome_back"
            android:textColor="#000000"
            android:textSize="@dimen/dp_20"
            android:textStyle="bold"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_20">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColorHint="#000000">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tied_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColorHint="#000000">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tied_mob_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColorHint="#000000">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tied_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spn_location"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/spinner_background"></Spinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_fix_appointment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:layout_weight="1"
                    android:text="Fix Appointment" />

                <View
                    android:layout_width="5px"
                    android:layout_height="match_parent"
                    android:background="#000000"
                    android:orientation="horizontal"/>
                <Button
                    android:id="@+id/btn_add_more"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:layout_weight="1"
                    android:text="Add More" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>

